Edit conclusion and add longformer results

--- a/submit/index.html
+++ b/submit/index.html
@@ -1500,6 +1500,22 @@
             <tr>
               <td class="tg-9wq8">
                 <span style="color: #333; background-color: #fff"
+                  >Longformer<sup>*,**</sup></span
+                >
+              </td>
+              <td class="tg-9wq8">
+                <span style="font-weight: 400; font-style: normal">-</span>
+              </td>
+              <td class="tg-9wq8">
+                <span style="font-weight: 400; font-style: normal">84.03</span>
+              </td>
+              <td class="tg-9wq8">
+                <span style="font-weight: 400; font-style: normal">-</span>
+              </td>
+            </tr>
+            <tr>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff"
                   >TURL<sup>*,**</sup></span
                 >
               </td>
@@ -1789,6 +1805,22 @@
                 >
               </td>
               <td class="tg-h2b0">-</td>
+            </tr>
+            <tr>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff"
+                  >Longformer<sup>*,**</sup></span
+                >
+              </td>
+              <td class="tg-9wq8">
+                <span style="font-weight: 400; font-style: normal">-</span>
+              </td>
+              <td class="tg-9wq8">
+                <span style="font-weight: 400; font-style: normal">80.36</span>
+              </td>
+              <td class="tg-9wq8">
+                <span style="font-weight: 400; font-style: normal">-</span>
+              </td>
             </tr>
             <tr>
               <td class="tg-c3ow">TURL<sup>*,**</sup></td>
@@ -3225,9 +3257,8 @@
       <h2>7. Conclusion</h2>
 
      <p>
-      To conclude our study, we have presented Neighboring, our proposed approach 
-      for table annotation in the context of CTA and CPA tasks.we found that the
-      performance of our neighboring approach is limited by the context size and 
+      To conclude our study, we have presented the Neighbor methods,we found that the
+      performance of approach is limited by the context size and 
       may not be as effective for  tables with fewer columns. To address this limitation,
       future work could explore the use of LongFormer model to process longer text and
       potentially reduce the need for more columns in a horizontal direction. Additionally, 
