--- a/submit/index.html
+++ b/submit/index.html
@@ -1484,14 +1484,14 @@
             <tr>
               <td class="tg-9wq8">
                 <span style="color: #333; background-color: #fff"
-                  >DODUO<sup>*,**</sup></span
+                  >Longformer<sup>*</sup></span
                 >
               </td>
               <td class="tg-9wq8">
                 <span style="font-weight: 400; font-style: normal">-</span>
               </td>
               <td class="tg-9wq8">
-                <span style="font-weight: 400; font-style: normal">84.82</span>
+                <span style="font-weight: 400; font-style: normal">84.03</span>
               </td>
               <td class="tg-9wq8">
                 <span style="font-weight: 400; font-style: normal">-</span>
@@ -1500,14 +1500,14 @@
             <tr>
               <td class="tg-9wq8">
                 <span style="color: #333; background-color: #fff"
-                  >Longformer<sup>*,**</sup></span
+                  >DODUO<sup>*,**</sup></span
                 >
               </td>
               <td class="tg-9wq8">
                 <span style="font-weight: 400; font-style: normal">-</span>
               </td>
               <td class="tg-9wq8">
-                <span style="font-weight: 400; font-style: normal">84.03</span>
+                <span style="font-weight: 400; font-style: normal">84.82</span>
               </td>
               <td class="tg-9wq8">
                 <span style="font-weight: 400; font-style: normal">-</span>
@@ -1790,6 +1790,22 @@
               <td class="tg-h2b0">-</td>
             </tr>
             <tr>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff"
+                  >Longformer<sup>*</sup></span
+                >
+              </td>
+              <td class="tg-9wq8">
+                <span style="font-weight: 400; font-style: normal">-</span>
+              </td>
+              <td class="tg-9wq8">
+                <span style="font-weight: 400; font-style: normal">80.36</span>
+              </td>
+              <td class="tg-9wq8">
+                <span style="font-weight: 400; font-style: normal">-</span>
+              </td>
+            </tr>
+            <tr>
               <td class="tg-h2b0">DODUO<sup>*,**</sup></td>
               <td class="tg-h2b0">-</td>
               <td class="tg-h2b0">
@@ -1805,22 +1821,6 @@
                 >
               </td>
               <td class="tg-h2b0">-</td>
-            </tr>
-            <tr>
-              <td class="tg-9wq8">
-                <span style="color: #333; background-color: #fff"
-                  >Longformer<sup>*,**</sup></span
-                >
-              </td>
-              <td class="tg-9wq8">
-                <span style="font-weight: 400; font-style: normal">-</span>
-              </td>
-              <td class="tg-9wq8">
-                <span style="font-weight: 400; font-style: normal">80.36</span>
-              </td>
-              <td class="tg-9wq8">
-                <span style="font-weight: 400; font-style: normal">-</span>
-              </td>
             </tr>
             <tr>
               <td class="tg-c3ow">TURL<sup>*,**</sup></td>
