--- a/submit/index.html
+++ b/submit/index.html
@@ -3219,7 +3219,7 @@
       <h2>6. Discussion</h2>
       <p><b>WikiTable dataset</b></p>
       <p>
-        In <i>Tables 2.a and 2.b</i>, we can see that the best serialization
+        In <i>Tables 2a and 2b</i>, we can see that the best serialization
         differs between the SOTAB and WikiTable datasets. One possible reason
         for this difference is that the WikiTable dataset contains more tables
         with few columns, such as some tables that only have 2 columns. This
