CPA section re-formulation is wrong
- correct the shortening and reformulation of cpa

--- a/submit/index.html
+++ b/submit/index.html
@@ -1002,14 +1002,14 @@
       <span id="toc2.2"></span>
       <h3>2.2 Columns Property Annotation (CPA)</h3>
       <p>
-        CPA is a web data integration task that aims to identify relationships
-        between different columns in a table. It can infer relationships that
-        might not be immediately obvious, as illustrated by its ability to help
-        infer that the address column refers to the hotel's location when
-        applied to a table with columns labeled "hotel/name" and "address" (see
-        <a href="#toc2.1.Fig">Figure 1</a>). CPA plays a crucial role in
-        ensuring data quality control and schema matching [<a href="#toc17">7</a
-        >].
+        CPA is a web data integration task and it plays a crucial role in
+        ensuring data quality control and schema matching[<a href="#toc17">7</a>]. 
+        It aims to identify relationships between different columns in a table. 
+        It can infer relationships that might not be immediately obvious, as 
+        illustrated in <a href="#toc2.1.Fig">Figure 1</a>,  CPA can help machine 
+        learning models to infer that the <b>"address" </b>column refers to the
+         hotel's location.
+
       </p>
 
       <p>
