--- a/submit/index.html
+++ b/submit/index.html
@@ -591,45 +591,6 @@
         s.parentNode.insertBefore(ga, s);
       })();
     </script>
-    <script type="application/ld+json">
-      {
-      	"@context": "http://schema.org/",
-      	"@type": "Dataset",
-      	"name": "Web Data Commons - Schema.org Table Corpus",
-      	"description": "The product dataset consists of 20 million pairs of product offers referring to the same products. The offers were extracted from 43 thousand e-shops which provide schema.org annotations including some form of product ID such as a GTIN or MPN. We also created a gold standard by manually verifying 4400 pairs of offers belonging to four different product categories.",
-      	"url": "http://webdatacommons.org/structureddata/schemaorgtables/index.html",
-      	"keywords": [
-      		"table corpus",
-      		"product corpus",
-      		"large scale",
-      		"product matching",
-      		"entity matching"
-      	],
-      	"creator": [
-      		{
-      			"@type": "Person",
-      			"url": "https://www.uni-mannheim.de/dws/people/researchers/phd-students/ralph-peeters/"
-      			"name": "Ralph Peeters"
-      		},
-      		{
-      			"@type": "Person",
-      			"url": "https://www.uni-mannheim.de/dws/people/professors/prof-dr-christian-bizer/",
-      			"name": "Christian Bizer"
-      		}
-      	],
-      	"distribution": [{
-      		"@type": "DataDownload",
-      		"fileFormat": [
-      			"json"
-      		],
-      		//TODO: Change once final
-      		"contentUrl": "http://webdatacommons.org/structureddata/sotab/index.html"
-      	}],
-      	"citation": [
-
-      	]
-      }
-    </script>
     <script charset="utf-8">
       var TGSort =
         window.TGSort ||
@@ -874,9 +835,8 @@
       <p>
         This work is organized as follows. Firstly, in Chapter 1, we will
         introduce and motivate the task of table annotation. Furthermore, in
-        Chapter 2, we will provide an overview of the preliminaries such as CTA,
-        CPA, and Transformer. Subsequently, in Chapter 3, we will present the
-        related work. Moving on to Chapter 4, we will describe the models,
+        Chapter 2, we will provide an overview of the table annotation tasks. Subsequently, in Chapter 3, we will present the
+        related work including Transformer model. Moving on to Chapter 4, we will describe the models,
         preprocessing steps, and serialization approaches. Additionally, in
         Chapter 5, we will describe the experiment setup. Then, in Chapter 6, we
         will delve into the experimental results and error analysis. Finally, in
