--- a/submit/index.html
+++ b/submit/index.html
@@ -973,7 +973,7 @@
         >]. It aims to identify relationships between different columns in a
         table. It can infer relationships that might not be immediately obvious,
         as illustrated in <a href="#toc2.1.Fig">Figure 1</a>, CPA can help
-        machine learning models to infer that the <b>"address" </b>column refers
+        to infer that the <b>"address" </b>column refers
         to the hotel's location.
       </p>
 
